--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Mar 14 02:38:07 PST 1999 Jeff Law  (law@cygnus.com)
+
+	* egcs-1.1.2 Released.
+
 Mon Mar  1 23:37:06 1999  Jeffrey A Law  (law@cygnus.com)
 
 	Fri Dec  4 01:33:05 1998  Niall Smart <nialls@euristix.ie>
