--- a/etc/ChangeLog
+++ b/etc/ChangeLog
@@ -1,3 +1,7 @@
+Sun Mar 14 02:38:07 PST 1999 Jeff Law  (law@cygnus.com)
+
+	* egcs-1.1.2 Released.
+
 Thu May 14 14:43:10 1998  Nick Clifton  <nickc@cygnus.com>
 
 	* targetdoc/arm-interwork.texi: Document dlltool support of
