--- a/libio/testsuite/ChangeLog
+++ b/libio/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+Sun Mar 14 02:38:07 PST 1999 Jeff Law  (law@cygnus.com)
+
+	* egcs-1.1.2 Released.
+
 Sat Jun 27 23:59:35 1998  Carlo Wood  <carlo@runaway.xs4all.nl>
 
 	* lib/libio.exp (test_libio): Reset ld_library_path before appending
