--- a/libstdc++/ChangeLog
+++ b/libstdc++/ChangeLog
@@ -1,3 +1,7 @@
+Sun Mar 14 02:38:07 PST 1999 Jeff Law  (law@cygnus.com)
+
+	* egcs-1.1.2 Released.
+
 Thu Feb 25 02:21:22 1999  Jeffrey A Law  (law@cygnus.com)
 
 	Thu Feb 18 19:53:17 1999  Marc Espie <espie@cvs.openbsd.org>
