--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,9 +1,14 @@
+2015-07-17  Mikael Morin  <mikael@gcc.gnu.org>
+
+	* gfortran.dg/coarray_collectives_16.f90: Fix patterns
+	as follow-up to r225932.
+
 2015-07-17  Uros Bizjak  <ubizjak@gmail.com>
 
 	PR target/66866
 	* g++.dg/pr66866.C: New test.
 
-2015-06-17  Uros Bizjak  <ubizjak@gmail.com>
+2015-07-17  Uros Bizjak  <ubizjak@gmail.com>
 
 	Backport from mainline:
 	2015-07-10  Uros Bizjak  <ubizjak@gmail.com>
@@ -14,7 +19,7 @@
 	type to prevent possible flag-clobbering zero-extensions.
 	* gcc.target/i386/pr66703.c: New test.
 
-2015-06-17  Uros Bizjak  <ubizjak@gmail.com>
+2015-07-17  Uros Bizjak  <ubizjak@gmail.com>
 
 	Backport from mainline:
 	2015-07-09  Uros Bizjak  <ubizjak@gmail.com>
@@ -22,7 +27,7 @@
 	PR target/66814
 	* gcc.target/i386/pr66814.c: New test.
 
-2015-06-17  Uros Bizjak  <ubizjak@gmail.com>
+2015-07-17  Uros Bizjak  <ubizjak@gmail.com>
 
 	Backport from mainline:
 	2015-07-15  Uros Bizjak  <ubizjak@gmail.com>
